--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?serverTimezone=UTC
 spring.datasource.username=connect
 spring.datasource.password=E94MwivHLb
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-root.yaml
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
