--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-root.yaml
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+jwt.expiration=600000
+jwt.secret=orJuaYyyx9ubMkWtY8EKrAgYwJT9frePu3opYCvHaETFFzkN24
