--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-root.yaml
+
+jwt.expiration=600000
+jwt.secret=orJuaYyyx9ubMkWtY8EKrAgYwJT9frePu3opYCvHaETFFzkN24
