--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-jwt.expiration=600000
+jwt.expiration=3600000
 jwt.secret=orJuaYyyx9ubMkWtY8EKrAgYwJT9frePu3opYCvHaETFFzkN24
