--- a/src/main/resources/db/changelog/db.changelog-root.yaml
+++ b/src/main/resources/db/changelog/db.changelog-root.yaml
@@ -15,3 +15,7 @@ databaseChangeLog:
       file: db/changelog/changes/07-create-users-roles-table.yaml
   - include:
       file: db/changelog/changes/08-add-default-roles.yaml
+  - include:
+      file: db/changelog/changes/09-create-category-table.yaml
+  - include:
+      file: db/changelog/changes/10-create-book-categories-table.yaml
