--- a/src/main/resources/db/changelog/db.changelog-root.yaml
+++ b/src/main/resources/db/changelog/db.changelog-root.yaml
@@ -23,3 +23,5 @@ databaseChangeLog:
       file: db/changelog/changes/11-create-shopping-carts-table.yaml
   - include:
       file: db/changelog/changes/12-create-shopping-cart-items-table.yaml
+  - include:
+      file: db/changelog/changes/13-implement-cart-items-soft-deletion.yaml
