--- a/src/main/resources/db/changelog/db.changelog-root.yaml
+++ b/src/main/resources/db/changelog/db.changelog-root.yaml
@@ -25,3 +25,7 @@ databaseChangeLog:
       file: db/changelog/changes/12-create-shopping-cart-items-table.yaml
   - include:
       file: db/changelog/changes/13-implement-cart-items-soft-deletion.yaml
+  - include:
+      file: db/changelog/changes/14-create-orders-table.yaml
+  - include:
+      file: db/changelog/changes/15-create-order-items-table.yaml
